# ai-langgraph-agents

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  router.ipynb
module-1/studio/: agent.py  pyproject.toml
module-2/studio/: chatbot.py
module-4/studio/: parallelization.py  research_assistant.py  sub_graphs.py
module-5/: memoryschema_collection.ipynb
module-5/studio/: langgraph.json
module-6/deployment/: docker-compose-example.yml  task_maistro.py
