[project]
name = "studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-cli[inmem]>=0.4.21",
    "langgraph-prebuilt>=1.0.9",
]
